# ros-encoder

./: Dockerfile  docker-compose.yml  run.sh
ros_encoder/: CMakeLists.txt  package.xml
ros_encoder/launch/: ros_encoder.launch.py
ros_encoder/ros_encoder/: a_module_to_import.py  encoder_interface.py  multiturn_encoder_node.py  python_node.py
